testfx/errors/error_tests/err_16_nested_error.fx
// 测试16: 嵌套错误 - 深层嵌套中的错误
a := 10
if (a > 0) {
    b := 20
    if (b > 10) {
        c := a + b + 
        println(c)
    }
}
